# esp32-mainboard

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
docs/plans/: 2026-02-26-servo-controller-design.md  2026-02-26-servo-controller-impl.md  2026-02-26-tmp107-design.md  2026-02-28-tmp107-oneshot-batching-design.md  2026-02-28-tmp107-oneshot-batching-plan.md  2026-03-01-blackbox-uart-design.md  2026-03-01-blackbox-uart-implementation.md  2026-03-01-signal-light-sequencer-design.md  2026-03-01-signal-light-sequencer-plan.md
examples/: embasy-access-point-with-sta.rs  picoserve-embassy-helloworld.rs  picoserve-path-params.rs
scripts/: send_shutdown_mqtt.sh
src/: board.rs  channel.rs  config.rs  error.rs  fire_trigger.rs  idle_monitor.rs  lib.rs  server.rs  signal_light.rs  tmp107.rs  wifi.rs
src/html/: index.html
src/power/: controller.rs  mod.rs
src/simple_output/: mod.rs
src/tasks/: adc.rs  charger.rs  digital_io.rs  interrupt.rs  mod.rs  power.rs  uart.rs
src/tmp107/: commands.rs  mod.rs  registers.rs
tools/blackbox-decoder/: Cargo.toml
tools/blackbox-decoder/.cargo/: config.toml
tools/blackbox-decoder/src/: decoder.rs  main.rs  packet.rs
